--- a/site_eduvit/mysite/templates/mysite/blog_list.html
+++ b/site_eduvit/mysite/templates/mysite/blog_list.html
@@ -1,4 +1,4 @@
-{% {% extends 'mysite/layout.html' %}%}
+{%extends 'mysite/layout.html' %}
 {% load static %}
 {% block title %}Блог{% endblock %}
 
