--- a/site_eduvit/mysite/templates/mysite/layout.html
+++ b/site_eduvit/mysite/templates/mysite/layout.html
@@ -14,6 +14,8 @@
     <div class="header">
         <a>Панель навигации</a>
     </div>
+    <div style="height: 50px">
+    </div>
     {% block content %}
     {% endblock %}
 </body>
