Изменения в лучшую сторону(Крутые)

--- a/site_eduvit/mysite/templates/mysite/layout.html
+++ b/site_eduvit/mysite/templates/mysite/layout.html
@@ -25,7 +25,7 @@
             
             <div class="nav-menu">
                 <div class="nav-buttons">
-                    <a href="/" class="nav-button">Главная</a>
+                    <a href="{% url 'mysite:index' %}" class="nav-button">Главная</a>
                     <a href="/lenta/" class="nav-button">Лента</a>
                     <a href="/news/" class="nav-button">Новости</a>
                     <a href="/contacts/" class="nav-button">Контакты</a>
