--- a/site_eduvit/mysite/templates/mysite/layout.html
+++ b/site_eduvit/mysite/templates/mysite/layout.html
@@ -32,6 +32,15 @@
                     <a href="/account/" class="nav-button">Мой аккаунт</a>
                 </div>
             </div>
+            <div class="login">
+                {% if user.is_authenticated %}
+                <a>Привет, {{ user.username }}</a>
+                <a href="" class="nav-button">Выход</a>
+                {% else %}
+                <a href="" class="nav-button">Войти</a>
+                <a href="" class="nav-button">Зарегистрироваться</a>
+                {% endif %}
+            </div>
         </div>
     </div>
     <div class="header-spacer"></div>
