--- a/site_eduvit/static/mysite/css/layout.css
+++ b/site_eduvit/static/mysite/css/layout.css
@@ -80,6 +80,10 @@
     height: 70px;
 }
 
+body {
+    background-color: #686868;
+}
+
 @media (max-width: 768px) {
     .nav-container {
         flex-direction: column;
