--- a/site_eduvit/mysite/templates/mysite/layout.html
+++ b/site_eduvit/mysite/templates/mysite/layout.html
@@ -35,6 +35,8 @@
             <div class="login">
                 {% if user.is_authenticated %}
                 <a>Привет, {{ user.username }}</a>
+                {% if user.is_superuser %}
+                    <a class ="b"
                 <a href="" class="nav-button">Выход</a>
                 {% else %}
                 <a href="" class="nav-button">Войти</a>
