--- a/site_eduvit/static/mysite/css/blog_detail.css
+++ b/site_eduvit/static/mysite/css/blog_detail.css
@@ -5,8 +5,9 @@
 }
 
 img {
-    max-width: 50%;
-    margin-right: 1%;
+    max-width: 40%;
+    border-radius: 10px;
+    margin-bottom: 2%;
 }
 
 .content {
@@ -20,4 +21,12 @@ img {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+}
+
+.comments {
+    display: flex;
+    padding: 1%;
+    flex-direction: column;
+    width: 40%;
+    align-items: center;
 }
