--- a/site_eduvit/mysite/templates/mysite/layout.html
+++ b/site_eduvit/mysite/templates/mysite/layout.html
@@ -36,13 +36,14 @@
                 {% if user.is_authenticated %}
                 <a>Привет, {{ user.username }}</a>
                 {% if user.is_superuser %}
-                    <a class ="b"
+                    <a href="/admin/" class="nav-button b">Администрирование</a>
+                {% endif %}
                 <a href="" class="nav-button">Выход</a>
-                {% else %}
+            {% else %}
                 <a href="" class="nav-button">Войти</a>
                 <a href="" class="nav-button">Зарегистрироваться</a>
-                {% endif %}
-            </div>
+            {% endif %}
+        </div>
         </div>
     </div>
     <div class="header-spacer"></div>
