--- a/site_eduvit/mysite/templates/mysite/blog_list.html
+++ b/site_eduvit/mysite/templates/mysite/blog_list.html
@@ -7,15 +7,18 @@
 {% endblock %}
 
 {% block content %}
-    <div class="list">
-        {% for blog in blogs %}
-            <div class="blog" style="background: url({{ blog.image.url }}) no-repeat; background-position: center; background-size: cover;">
-                <a href="{{ blog.get_absolute_url }}">{{blog.title}}</a>
-                <div class="blog_info">
-                    <a>{{ blog.author }}</a>
-                    <a>{{ blog.date_published }}</a>
+    <div class="block_content">
+        <a class="newblogbutton" href="">Создать блог</a>
+        <div class="list">
+            {% for blog in blogs %}
+                <div class="blog" style="background: url({{ blog.image.url }}) no-repeat; background-position: center; background-size: cover;">
+                    <a href="{{ blog.get_absolute_url }}">{{blog.title}}</a>
+                    <div class="blog_info">
+                        <a>{{ blog.author }}</a>
+                        <a>{{ blog.date_published }}</a>
+                    </div>
                 </div>
-            </div>
-        {% endfor %}    
+            {% endfor %}    
+        </div>
     </div>
 {% endblock %}
