--- a/site_eduvit/mysite/templates/mysite/layout.html
+++ b/site_eduvit/mysite/templates/mysite/layout.html
@@ -35,9 +35,9 @@
             <div class="login">
                 {% if user.is_authenticated %}
                 <a>Привет, {{ user.username }}</a>
-                {% if user.is_superuser %}
+                {% comment %} {% if user.is_superuser %}
                     <a href="/admin/" class="nav-button b">Администрирование</a>
-                {% endif %}
+                {% endif %} {% endcomment %}
                 <a href="" class="nav-button">Выход</a>
             {% else %}
                 <a href="" class="nav-button">Войти</a>
