--- a/site_eduvit/static/mysite/css/blog_list.css
+++ b/site_eduvit/static/mysite/css/blog_list.css
@@ -2,28 +2,55 @@
     width: 100%
 }
 
+.block_content {
+    margin-top: 15px;
+}
+
 .blog {
     display: flex;
     width: 20%;
+    height: 260px;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
     border-radius: 10px;
     margin: 1% 0 0 1.5%;
+    padding: 15px 0;
 }
 
 .blog a {
     color: black;
     text-decoration: none;
-    font-size: 25;
+    font-size: 25px;
     text-shadow: gray 1px;
+    text-align: center;
+    padding: 0 10px;
 }
 
 .blog_info {
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
+    align-items: center;
+    width: 100%;
+    padding: 10px 0;
 }
 
 .blog_info a {
     font-size: 15;
+}
+
+.newblogbutton {
+    background-color: #307b75;
+    padding: 8px 15px;
+    margin-top: 1%;
+    margin-left: 10px;
+    text-decoration: none;
+    color: #ffffff;
+    border-radius: 4px;
+    transition: all 0.2s ease;
+    font-size: 0.9rem;
+}
+
+.newblogbutton:hover {
+    color: #333;
 }
