--- a/site_eduvit/static/mysite/css/layout.css
+++ b/site_eduvit/static/mysite/css/layout.css
@@ -10,6 +10,7 @@
     justify-content: space-between;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     font-family: Arial, sans-serif;
+    border-radius: 10px;
 }
 
 .nav-container {
