--- a/site_eduvit/mysite/templates/mysite/layout.html
+++ b/site_eduvit/mysite/templates/mysite/layout.html
@@ -28,7 +28,7 @@
                     <a href="{% url 'mysite:index' %}" class="nav-button">Главная</a>
                     <a href="/news/" class="nav-button">Новости</a>
                     <a href="/contacts/" class="nav-button">Контакты</a>
-                    <a href="/account/" class="nav-button">Мой аккаунт</a>
+                    <a href="{% url 'users:profile' %}" class="nav-button">Мой аккаунт</a>
                 </div>
             </div>
             <div class="login">
