--- a/site_eduvit/mysite/templates/mysite/layout.html
+++ b/site_eduvit/mysite/templates/mysite/layout.html
@@ -27,7 +27,7 @@
                 <div class="nav-buttons">
                     <a href="{% url 'mysite:index' %}" class="nav-button">Главная</a>
                     <a href="/news/" class="nav-button">Новости</a>
-                    <a href="/contacts/" class="nav-button">Контакты</a>
+                    <a href="{% url 'mysite:contacts' %}" class="nav-button">Контакты</a>
                     <a href="{% url 'users:profile' %}" class="nav-button">Мой аккаунт</a>
                 </div>
             </div>
